Begin front-end HTML work adding styles and divs to define input and output areas

--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
 
-    <title></title>
+    <title>Pizza Planet</title>
   </head>
   <body>
+    <div class="container"> <!-- div for container -->
+      <div class="jumbotron">  <!-- div for jumbotron -->
+        <h1>Welcome to Pizza Planet</h1>
+      </div><!-- div for jumbotron -->
+      <h2>Place your order!</h2>
+      <div class="form-area"> <!-- div for form area -->
+        <form class="" action="index.html" method="post">
 
+        </form>
+
+
+
+      </div> <!-- div for form area -->
+      <div class="output-area"> <!-- div for output area -->
+
+      </div> <!-- div for output area -->
+
+
+
+    </div> <!-- div for container -->
   </body>
 </html>
