Establish radio input areas in HTML for pizza size and toppings.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,66 @@
         <h1>Welcome to Pizza Planet</h1>
       </div><!-- div for jumbotron -->
       <h2>Place your order!</h2>
-      <div class="form-area"> <!-- div for form area -->
-        <form class="" action="index.html" method="post">
+      <div class="form-group"> <!-- div for form area -->
+        <form class="form-group" action="index.html" method="post">
+          <label for="customerNameInput">Your name</label>
+          <input id="customerNameInput"type="text" name="" value="">
+
+          <div class="radio-group"> <!-- div for radio form area -->
+            <label>
+              <input type="radio" name="size" value="extra large">
+              Extra Large
+            </label>
+            <label>
+              <input type="radio" name="size" value="large">
+              Large
+            </label>
+            <label>
+              <input type="radio" name="size" value="medium">
+              Medium
+            </label>
+            <label>
+              <input type="radio" name="size" value="small">
+              Small
+            </label>
+          </div> <!-- div for radio form area -->
+          <div class="radio-group2"> <!-- div for radio2 form area -->
+            <label>
+              <input type="radio" name="size" value="pepperoni">
+              Pepperoni
+            </label>
+            <label>
+              <input type="radio" name="size" value="chicken">
+              Chicken
+            </label>
+            <label>
+              <input type="radio" name="size" value="anchovies">
+              Anchovies
+            </label>
+            <label>
+              <input type="radio" name="size" value="mushrooms">
+              Mushrooms
+            </label>
+            <label>
+              <input type="radio" name="size" value="olives">
+              Olives
+            </label>
+            <label>
+              <input type="radio" name="size" value="artichokes">
+              Artichokes
+            </label>
+            <label>
+              <input type="radio" name="size" value="extra cheese">
+              Extra Cheese
+            </label>
+
+
+
+
+          </div> <!-- div for radio2 form area -->
+
+
+
 
         </form>
 
