--- a/index.html
+++ b/index.html
@@ -22,59 +22,54 @@
 
           <div class="radio-group"> <!-- div for radio form area -->
             <label>
-              <input type="radio" name="size" value="extra large">
+              <input type="radio" name="sizeInput" value="extra large">
               Extra Large
             </label>
             <label>
-              <input type="radio" name="size" value="large">
+              <input type="radio" name="sizeInput" value="large">
               Large
             </label>
             <label>
-              <input type="radio" name="size" value="medium">
+              <input type="radio" name="sizeInput" value="medium">
               Medium
             </label>
             <label>
-              <input type="radio" name="size" value="small">
+              <input type="radio" name="sizeInput" value="small">
               Small
             </label>
           </div> <!-- div for radio form area -->
           <div class="radio-group2"> <!-- div for radio2 form area -->
             <label>
-              <input type="radio" name="size" value="pepperoni">
+              <input type="radio" name="toppingsInput" value="pepperoni">
               Pepperoni
             </label>
             <label>
-              <input type="radio" name="size" value="chicken">
+              <input type="radio" name="toppingsInput" value="chicken">
               Chicken
             </label>
             <label>
-              <input type="radio" name="size" value="anchovies">
+              <input type="radio" name="toppingsInput" value="anchovies">
               Anchovies
             </label>
             <label>
-              <input type="radio" name="size" value="mushrooms">
+              <input type="radio" name="toppingsInput" value="mushrooms">
               Mushrooms
             </label>
             <label>
-              <input type="radio" name="size" value="olives">
+              <input type="radio" name="toppingsInput" value="olives">
               Olives
             </label>
             <label>
-              <input type="radio" name="size" value="artichokes">
+              <input type="radio" name="toppingsInput" value="artichokes">
               Artichokes
             </label>
             <label>
-              <input type="radio" name="size" value="extra cheese">
+              <input type="radio" name="toppingsInput" value="extra cheese">
               Extra Cheese
             </label>
 
 
-
-
           </div> <!-- div for radio2 form area -->
-
-
-
 
         </form>
 
@@ -82,6 +77,11 @@
 
       </div> <!-- div for form area -->
       <div class="output-area"> <!-- div for output area -->
+        <h2>Your Price</h2>
+        <p><span id="outputPrice"></span></p>
+
+
+
 
       </div> <!-- div for output area -->
 
