fixed problem with toppings importing from jquery to an array, howevery new problem that did not previously existing in prototype.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               Small
             </label>
           </div> <!-- div for radio form area -->
-          <div class="checkbox-group"> <!-- div for radio2 form area -->
+          <div id="altToppingsInput" class="checkbox-group"> <!-- div for radio2 form area -->
             <label>
               <input type="checkbox" name="toppingsInput" id="pepperoni" value="pepperoni">
               Pepperoni
