Fix a rounding issue on the float by adding toFixed

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <div class="output-area"> <!-- div for output area -->
       <h2>Your Price</h2>
       <p><span id="outputPrice"></span></p>
+      <p>Hello <span id="outputName"></span>! Here's the Pizza we will be beaming down:</p>
     </div> <!-- div for output area -->
 
   </div> <!-- div for container -->
