Fix output to be coming directly from object properties and add name to price output

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div><!-- div for rows -->
 
     <div class="output-area"> <!-- div for output area -->
-      <h2>Your Price</h2>
+      <h2>Your Price, <span id="outputName"></span></h2>
       <p><span id="outputPrice"></span></p>
     </div> <!-- div for output area -->
 
